[package]
name = "risque"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
glob = "0.3.2"
libc = "0.2.171"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
